--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "helmet": "^7.0.0",
+    "http-status": "^1.6.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "save": "^2.5.0",
-    "sequelize": "^6.21.4"
+    "sequelize": "^6.21.4",
+    "uuid": "^9.0.0",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
