Add Refresh Token

--- a/.env
+++ b/.env
@@ -1,6 +1,22 @@
 NODE_ENV = development
 PORT = 5200
+
+# JWT
 JWT_SECRET = 1234567890
+ACCESS_TOKEN_LIFE=30m
+REFRESH_TOKEN_LIFE=30d
+# Number of minutes after which an access token expires
+JWT_ACCESS_EXPIRATION_MINUTES=30
+# Number of days after which a refresh token expires
+JWT_REFRESH_EXPIRATION_DAYS=30
+
+#Log config
+LOG_FOLDER=logs/
+LOG_FILE=%DATE%-app-log.log
+LOG_LEVEL=error
+
+
+
 
 # PORT=5000
 
