--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "http-status": "^1.6.2",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
