--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.3",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^2.0.19",
+    "path": "^0.12.7",
     "save": "^2.5.0",
     "sequelize": "^6.21.4",
     "uuid": "^9.0.0",
