add Confirm Email Link

--- a/.env
+++ b/.env
@@ -1,5 +1,12 @@
+APP_NAME="STARTER KIT V2"
 NODE_ENV = development
 PORT = 5200
+
+
+APP_IMAGE_URL="https://hticnet.com/htic/img/logos/hticnet_blue.svg"
+CURRENT_YEAR=2023
+SUPPORT_EMAIL="support@hticnet.com"
+
 
 # JWT
 JWT_SECRET = 1234567890
@@ -9,6 +16,14 @@ REFRESH_TOKEN_LIFE=30d
 JWT_ACCESS_EXPIRATION_MINUTES=30
 # Number of days after which a refresh token expires
 JWT_REFRESH_EXPIRATION_DAYS=30
+
+# MAIL with nodeMailer
+SMTP_HOST="mail.hticnet.com"
+SMTP_PORT="465"
+SMTP_EMAIL="no_reply@hticnet.com"
+SMTP_PASSWORD="5$ByXgnv2v4"
+FROM_NAME="STARTER KIT V2"
+FROM_EMAIL="no_reply@hticnet.com"
 
 #Log config
 LOG_FOLDER=logs/
