--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "starter_kit_2",
+    "database": "starter_kit_dev",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
